Fix: instructions panels are hidden by default

--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ input {
     z-index: 1;
     left: 0;
     bottom: 0;
+    display: none;
 }
 
 .instructions-pic {
